<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mbs_navigation</name>
  <version>1.2.0</version>
  <description>
    The mbs_navigation provides roslaunch scripts for starting the navigation.
  </description>
  <author email="support@mybotshop.de">Salman Omar Sohail</author>
  <maintainer email="support@mybotshop.de">Salman Omar Sohail</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
